--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   avatar           : "homayoun-e1539542717262.jpg"
   name             : "Mohammad Mehdi Homayounpour"
   # pronouns         : "Prof."  
-  bio              : "Profersor, CE"
+  bio              : "Professor, Computer Engineering"
   location         : "Tehran"
-  employer         : "Amirkabir university of technology"
-  uri              : # URL
+  employer         : "Amirkabir University of Technology"
+  uri              : "https://aut.ac.ir/cv/2571/MOHAMMAD-MEHDI-HOMAYOUNPOUR?slc_lang=en&&cv=2571&mod=scv"
   email            : "homayoun [at] aut.ac.ir" 
 
   # Academic websites
